# asceswap-orderbook

./: .env.example  .gitignore  Cargo.toml  railpack.json
crates/asceswap-adapter-keeper/: Cargo.toml
crates/asceswap-adapter-keeper/src/: lib.rs  main.rs
crates/asceswap-api/: Cargo.toml
crates/asceswap-api/src/: actor_service.rs  demo_market_maker.rs  error.rs  event.rs  lib.rs  request.rs  response.rs  service.rs  tests.rs  wire.rs
crates/asceswap-engine/: Cargo.toml
crates/asceswap-engine/src/: command.rs  engine.rs  error.rs  event.rs  lib.rs  record.rs  result.rs  settlement.rs  snapshot.rs  tests.rs
crates/asceswap-executor/: Cargo.toml
crates/asceswap-executor/src/: lib.rs  main.rs
crates/asceswap-market-actor/: Cargo.toml
crates/asceswap-market-actor/src/: lib.rs  tests.rs
crates/asceswap-matcher/: Cargo.toml
crates/asceswap-matcher/src/: assisted.rs  config.rs  direct.rs  error.rs  lib.rs  plan.rs  tests.rs  validate.rs
crates/asceswap-math/: Cargo.toml
crates/asceswap-math/src/: error.rs  fee.rs  fill_accounting.rs  fixed_point.rs  lib.rs  price.rs  tests.rs
crates/asceswap-orderbook/: Cargo.toml
crates/asceswap-orderbook/src/: book.rs  depth.rs  error.rs  level.rs  lib.rs  resting_order.rs  tests.rs
crates/asceswap-postgres/: Cargo.toml
crates/asceswap-postgres/src/: codec.rs  lib.rs  store.rs  tests.rs
crates/asceswap-server/: Cargo.toml
crates/asceswap-server/src/: lib.rs  main.rs  tests.rs
crates/asceswap-state/: Cargo.toml
crates/asceswap-state/src/: error.rs  lib.rs  lifecycle.rs  reservation.rs  tests.rs
crates/asceswap-storage/: Cargo.toml
crates/asceswap-storage/schema/: postgres.sql
crates/asceswap-storage/src/: error.rs  lib.rs  memory.rs  record.rs  store.rs  tests.rs
crates/asceswap-types/: Cargo.toml
crates/asceswap-types/src/: error.rs  lib.rs  order.rs  primitives.rs  side.rs  tests.rs
crates/asceswap-validation/: Cargo.toml
crates/asceswap-validation/src/: context.rs  error.rs  hash.rs  lib.rs  tests.rs  validator.rs
docs/: orderbook-executor-runbook.md  orderbook-flow-explainer.md
