[workspace]
members = [
    "crates/asceswap-types",
    "crates/asceswap-math",
    "crates/asceswap-orderbook",
    "crates/asceswap-matcher",
    "crates/asceswap-validation",
    "crates/asceswap-state",
    "crates/asceswap-engine",
    "crates/asceswap-storage",
    "crates/asceswap-postgres",
    "crates/asceswap-api",
    "crates/asceswap-server",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"
rust-version = "1.76"

[workspace.dependencies]
alloy-primitives = { version = "0.8", features = ["k256"] }
axum = { version = "0.7", features = ["ws"] }
asceswap-api = { path = "crates/asceswap-api" }
asceswap-engine = { path = "crates/asceswap-engine" }
asceswap-math = { path = "crates/asceswap-math" }
asceswap-matcher = { path = "crates/asceswap-matcher" }
asceswap-orderbook = { path = "crates/asceswap-orderbook" }
asceswap-state = { path = "crates/asceswap-state" }
asceswap-postgres = { path = "crates/asceswap-postgres" }
asceswap-server = { path = "crates/asceswap-server" }
asceswap-storage = { path = "crates/asceswap-storage" }
asceswap-types = { path = "crates/asceswap-types" }
asceswap-validation = { path = "crates/asceswap-validation" }
postgres = "0.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "sync"] }
tower = { version = "0.5", features = ["util"] }
