[workspace]
members = [
    "crates/asceswap-types",
    "crates/asceswap-math",
    "crates/asceswap-orderbook",
    "crates/asceswap-matcher",
    "crates/asceswap-validation",
    "crates/asceswap-state",
    "crates/asceswap-engine",
    "crates/asceswap-market-actor",
    "crates/asceswap-storage",
    "crates/asceswap-postgres",
    "crates/asceswap-api",
    "crates/asceswap-server",
    "crates/asceswap-executor",
    "crates/asceswap-adapter-keeper",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"
rust-version = "1.90"

[workspace.dependencies]
alloy-primitives = { version = "0.8", features = ["k256"] }
axum = { version = "0.7", features = ["ws"] }
asceswap-api = { path = "crates/asceswap-api" }
asceswap-adapter-keeper = { path = "crates/asceswap-adapter-keeper" }
asceswap-engine = { path = "crates/asceswap-engine" }
asceswap-math = { path = "crates/asceswap-math" }
asceswap-matcher = { path = "crates/asceswap-matcher" }
asceswap-market-actor = { path = "crates/asceswap-market-actor" }
asceswap-orderbook = { path = "crates/asceswap-orderbook" }
asceswap-state = { path = "crates/asceswap-state" }
asceswap-postgres = { path = "crates/asceswap-postgres" }
asceswap-server = { path = "crates/asceswap-server" }
asceswap-storage = { path = "crates/asceswap-storage" }
asceswap-types = { path = "crates/asceswap-types" }
asceswap-validation = { path = "crates/asceswap-validation" }
ethers = { version = "2", default-features = false, features = ["abigen", "rustls"] }
postgres = "0.19"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "sync"] }
tower = { version = "0.5", features = ["util"] }
