[package]
name = "asceswap-api"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
asceswap-engine.workspace = true
asceswap-market-actor.workspace = true
asceswap-math.workspace = true
asceswap-matcher.workspace = true
asceswap-state.workspace = true
asceswap-storage.workspace = true
asceswap-types.workspace = true
asceswap-validation.workspace = true
k256 = "0.13"
serde.workspace = true
tokio.workspace = true

[dev-dependencies]
serde_json.workspace = true
