[package]
name = "asceswap-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
asceswap-math.workspace = true
asceswap-matcher.workspace = true
asceswap-orderbook.workspace = true
asceswap-state.workspace = true
asceswap-types.workspace = true
asceswap-validation.workspace = true
