[package]
name = "asceswap-market-actor"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
asceswap-engine.workspace = true
asceswap-matcher.workspace = true
asceswap-orderbook.workspace = true
asceswap-state.workspace = true
asceswap-types.workspace = true
tokio.workspace = true

[dev-dependencies]
asceswap-validation.workspace = true
