[package]
name = "asceswap-postgres"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
asceswap-engine.workspace = true
asceswap-math.workspace = true
asceswap-state.workspace = true
asceswap-storage.workspace = true
asceswap-types.workspace = true
asceswap-validation.workspace = true
postgres.workspace = true
postgres_rustls.workspace = true
serde_json.workspace = true
tokio-rustls.workspace = true
webpki-roots.workspace = true

[dev-dependencies]
asceswap-api.workspace = true
asceswap-matcher.workspace = true
k256 = "0.13"
