[package]
name = "asceswap-server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
asceswap-api.workspace = true
asceswap-engine.workspace = true
asceswap-matcher.workspace = true
asceswap-postgres.workspace = true
asceswap-storage.workspace = true
asceswap-types.workspace = true
asceswap-validation.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
tower.workspace = true
